--- a/eureka-service/src/main/resources/application.properties
+++ b/eureka-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=aureka-service
-spring.config.import=optional:configserver:http://localhost:8888/
 
-#server.port=8761
-#eureka.client.register-with-eureka=false
-#eureka.client.fetch-registry=false
+server.port=8761
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
