--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=gateway-service
-spring.config.import=optional:configserver:http://localhost:8888/
 
-#server.port=8080
-#spring.cloud.discovery.enabled=true
-#eureka.instance.prefer-ip-address=true
+server.port=8080
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
