--- a/micro-service-personne/src/main/resources/application.properties
+++ b/micro-service-personne/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=PERSONNE-SERVICE
-spring.config.import=optional:configserver:http://localhost:8888/
 
-#server.port=8081
-#server.servlet.context-path=/api
-#
-#spring.datasource.url=jdbc:mysql://localhost:3306/personne-service?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=root
+server.port=8081
+server.servlet.context-path=/api
 
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#
-#spring.cloud.discovery.enabled=true
+spring.datasource.url=jdbc:mysql://localhost:3306/personne-service?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.cloud.discovery.enabled=true
 
